--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
 
 
-    <script src="https://www.paypal.com/sdk/js?client-id=test&currency=USD" data-sdk-integration-source="button-factory"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=AcNjYIZpARLJcjOclYr0cDDASFiNUZYH0wwBBDNtTqcMxXtAeszsOm35QFsZWuVNxZLlxcJ6DI9DSpIw&currency=EUR" data-sdk-integration-source="button-factory"></script>
     <script src="js/paypal.js"></script>
 
     <script src="js/products.js"></script>
