Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="https://sdk.mercadopago.com/js/v2"></script>
-    <title>E-Commerce Mercado Pago</title>
+    <title>La Bonaerense Store</title>
 </head>
 <body>
     <!-- shop content -->
